--- a/web/src/components/app.css
+++ b/web/src/components/app.css
@@ -42,3 +42,38 @@
   padding-top: 8px;
   line-height: 1.5em;
 }
+
+.logo {
+  background: url("images/cntr-logo.png") center no-repeat;
+  background-size: 70px auto;
+  width: 192px;
+  height: 40px;
+}
+
+.button {
+  -webkit-appearance: none;
+
+  width: 40px;
+  height: 40px;
+
+  border: none;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.loadButton {
+  background: url("images/icons/folder.png") center no-repeat;
+  background-size: 24px 24px;
+}
+
+.infoButton {
+  background: url("images/icons/info.png") center no-repeat;
+  background-size: 24px 24px;
+}
+
+.loadMapButton {
+  background: url("images/icons/map.png") center no-repeat;
+  background-size: 24px 24px;
+}
