--- a/web/src/components/app.css
+++ b/web/src/components/app.css
@@ -38,10 +38,9 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 32px;
-  background-color: rgba(0, 0, 0, 0.8);
-  padding-top: 8px;
-  line-height: 1.5em;
+  height: 40px;
+  background-color: rgba(0, 0, 0, .8);
+  line-height: 2.5em;
 }
 
 .logo {
