Add zoom to cursor and smooth zooming

--- a/web/style/index.css
+++ b/web/style/index.css
@@ -114,4 +114,6 @@ input[type=range]::-webkit-slider-runnable-track {
   padding: unset;
 }
 
-
+.leaflet-pane.leaflet-popup-pane.zooming {
+  display: none;
+}
