--- a/web/src/components/info-dialog.css
+++ b/web/src/components/info-dialog.css
@@ -1,5 +1,18 @@
+.wrapper {
+  text-align: center;
+}
+
 .logo {
-  width: 128px;
+  max-width: 450px;
+}
+
+h1 {
+  margin: 0px;
+}
+
+h4 {
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .link {
