--- a/web/src/components/load-map-dialog.css
+++ b/web/src/components/load-map-dialog.css
@@ -1,3 +1,8 @@
+.wrapper {
+  padding-right: 8px;
+  width: 300px;
+}
+
 .mapList {
   border-collapse: collapse;
   border: none;
@@ -8,7 +13,7 @@
   background-color: rgba(0,0,0,0.7);
   padding: 0 1em;
   font-weight: 500;
-  text-align: left;
+  text-align: center;
 }
 
 .mapListBody {
@@ -17,7 +22,7 @@
 
 .mapListItem {
   padding: 0 1em;
-  text-align: right;
+  text-align: left;
 }
 
 .mapListItem:hover {
