--- a/web/src/components/playback-widget.css
+++ b/web/src/components/playback-widget.css
@@ -46,6 +46,7 @@
 .playbackSpeedSlider {
   display: none;
   position: absolute;
+  z-index: 99999999;
   top: -60px;
   left: -36px;
   width: 96px;
