Finish state update; repair unit label display system

--- a/web/src/components/playback-widget.css
+++ b/web/src/components/playback-widget.css
@@ -46,7 +46,7 @@
 .playbackSpeedSlider {
   display: none;
   position: absolute;
-  z-index: 99999999;
+  z-index: 1;
   top: -60px;
   left: -36px;
   width: 96px;
