--- a/web/src/components/load-map-dialog.css
+++ b/web/src/components/load-map-dialog.css
@@ -1,12 +1,8 @@
-.wrapper {
-  padding-right: 8px;
-  width: 300px;
-}
-
 .mapList {
   border-collapse: collapse;
   border: none;
-  width: 100%;
+  min-width: 256px;
+  margin-right: 8px;
 }
 
 .mapListHeader {
