Cleanup, and adding color differentiation to mapmarkers

--- a/web/style/marker.css
+++ b/web/style/marker.css
@@ -1,4 +1,13 @@
-.icon {
+.marker {
+  position: absolute;
+  opacity: 1;
+}
+
+.marker.hidden {
+  visibility: hidden !important;
+}
+
+icon {
   position: absolute;
   opacity: 1;
 }
